Add horizontal scrolling to teams table

--- a/views/teams.njk
+++ b/views/teams.njk
@@ -89,7 +89,7 @@
             </form>
         </div>
 
-        <div class="column">
+        <div class="column table-container">
             <table id="tab-table-id" class="table is-striped is-fullwidth is-hoverable">
             <thead>
                 <tr>
