--- a/views/service.njk
+++ b/views/service.njk
@@ -35,7 +35,7 @@
                                     <strong>{{ecs.cidev.version}} </strong>
                                     - {{ecs.cidev.gitReleaseDate | date(dateFormat)}}
                                 {% else %}
-                                    Unkown
+                                    Unknown
                                 {% endif %}
                             </td>
                         </tr>
@@ -46,7 +46,7 @@
                                     <strong>{{ecs.staging.version}} </strong>
                                     - {{ecs.staging.gitReleaseDate | date(dateFormat)}}
                                 {% else %}
-                                    Unkown
+                                    Unknown
                                 {% endif %}
                             </td>
                         </tr>
