Host Bulma locally; Rename tabs

--- a/views/index.njk
+++ b/views/index.njk
@@ -20,8 +20,8 @@
     <h3>The dashboards</h3>
     <p>There are 3 tabs, each displaying different information.</p>
     <ul>
-      <li><strong>Teams</strong> - A list of services, grouped by team</li>
-      <li><strong>All Services</strong> - Every available service version</li>
+      <li><strong>Services</strong> - A list of services, grouped by team</li>
+      <li><strong>Classic</strong> - Every available service version (the classic view)</li>
       <li><strong>Runtimes</strong> - A reference table with each runtime/language, including end of life dates</li>
     </ul>
   </div>
