--- a/views/partials/tabs.njk
+++ b/views/partials/tabs.njk
@@ -4,10 +4,10 @@
       <a href="{{basePath}}">Home</a>
     </li>
     <li class="{{ 'is-active' if active == 'teams' }}">
-      <a href="{{basePath}}/teams">Teams</a>
+      <a href="{{basePath}}/teams">Services</a>
     </li>
     <li class="{{ 'is-active' if active == 'details' }}">
-      <a href="{{basePath}}/details">All Services</a>
+      <a href="{{basePath}}/details">Classic</a>
     </li>
     <li class="{{ 'is-active' if active == 'runtimes' }}">
       <a href="{{basePath}}/runtimes">Runtimes</a>
