Add underlines to all links

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -5,6 +5,9 @@
   top: 0;
   z-index: 2; /* keep above rows */
 }
+a {
+  text-decoration: underline;
+}
 
 .has-tooltip::before,
 .has-tooltip::after,
