Add heading; Remove redundant links

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -14,7 +14,7 @@
 
   <section class="hero">
     <div class="hero-body">
-      <p class="title">Companies House Service Dashboard</p>
+      <h1 class="title">Companies House Service Dashboard</h1>
       <p class="subtitle">Last scan: {{ lastScan | date("DD MMM YYYY - h:mm:ss A") }}</p>
     </div>
   </section>
