--- a/views/teams.njk
+++ b/views/teams.njk
@@ -3,28 +3,14 @@
 {% from "macros.njk" import addDaysAgo, sonarLink, depTrackLink, DepTrackMetrics, setStandardId, addCoverageColorClass %}
 
 {% macro gitReleaseInfo(version, ReleaseDate, min, max, repoLink) %}
-   {% set color = "red" %}
-
    {% if ReleaseDate %}
-
       {% set ReleaseDate = ReleaseDate | date("YYYY-MM-DD") %}
-      {% set daysago = ReleaseDate | daysPassed %}
-
-      {% if daysago >= max %}
-         {% set color = "red" %}
-      {% elseif daysago >= min %}
-         {% set color = "yellow" %}
-      {% else %}
-         {% set color = "green" %}
-      {% endif %}
-
    {% else %}
       {% set ReleaseDate = "no date loaded" %}
    {% endif %}
-   {% set colorClass = "td-git-version-" + color %}
 
-   <li class="{{ colorClass }}" title="{{ ReleaseDate }}">
-      <a class="{{ colorClass }}" href="{{ repoLink }}/releases/tag/{{ version }}">{{ version }}</a>{{addDaysAgo( ReleaseDate ) }}
+   <li title="{{ ReleaseDate }}">
+      <a href="{{ repoLink }}/releases/tag/{{ version }}">{{ version }}</a>{{addDaysAgo( ReleaseDate ) }}
    </li>
 {% endmacro %}
 
@@ -55,15 +41,15 @@
 {% block content %}
     <div class="field mb-4">
         <div class="control has-icons-left">
+            <label for="table-search">
+                Search: 
+            </label>
             <input
                 id="table-search"
                 class="input"
                 type="text"
-                placeholder="Search services..."
+                placeholder="Search table..."
             >
-            <span class="icon is-left">
-            <i class="fas fa-search"></i>
-            </span>
         </div>
     </div>
     <div class="columns">
@@ -129,7 +115,6 @@
                         </td>
 
                         <td class="td-runtime">
-                            <ul class="td-runtime-info">
                             {% for info in service.latestVersion.runtime.runtime %}
                                 {% if info %}
                                 {% if info.color == "red" %}
@@ -143,7 +128,6 @@
                                 {% endif %}
                                 {% endif %}
                             {% endfor %}
-                            </ul>
                         </td>
 
                         <!-- CI DEV -->
@@ -206,21 +190,15 @@
                                     </progress>
                                 {% endif %}
                                 <div class="level">
-                                    <a href="{{sonarUri}}/dashboard?id={{ service.sonarKey }}">
-                                        <span class="tag level-item is-danger has-tooltip-bottom" data-tooltip="Vulnerabilities">
-                                            {{ service.sonarMetrics.vulnerabilities }}
-                                        </span>
-                                    </a>
-                                    <a href="{{sonarUri}}/dashboard?id={{ service.sonarKey }}">
-                                        <span class="tag level-item is-warning has-tooltip-bottom" data-tooltip="Bugs">
-                                            {{ sonarBugs }}
-                                        </span>
-                                    </a>
-                                    <a href="{{sonarUri}}/dashboard?id={{ service.sonarKey }}">
-                                        <span class="tag level-item is-info has-tooltip-bottom" data-tooltip="Code Smells">
-                                            {{ service.sonarMetrics.code_smells }}
-                                        </span>
-                                    </a>
+                                    <span class="tag level-item is-danger has-tooltip-bottom" data-tooltip="Vulnerabilities">
+                                        {{ service.sonarMetrics.vulnerabilities }}
+                                    </span>
+                                    <span class="tag level-item is-warning has-tooltip-bottom" data-tooltip="Bugs">
+                                        {{ sonarBugs }}
+                                    </span>
+                                    <span class="tag level-item is-info has-tooltip-bottom" data-tooltip="Code Smells">
+                                        {{ service.sonarMetrics.code_smells }}
+                                    </span>
                                 </div>
                             {% endif%}
                         </td>
