Add Git release links to service page

--- a/views/service.njk
+++ b/views/service.njk
@@ -104,7 +104,9 @@
                         {% for release in service.gitInfo.releases %}
                             <tr>
                                 <td>
-                                    {{release.version}}
+                                    <a href="{{ service.gitInfo.repo }}/releases/tag/{{ release.version }}">
+                                        {{release.version}}
+                                    </a>
                                 </td>
                                 <td>
                                     {{release.date | date(dateFormat)}}
