--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,10 +1,20 @@
 /* public/css/common.css */
 
+body {
+  padding: 1em;
+}
+
+nav {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 .table thead th {
   position: sticky;
   top: 0;
   z-index: 2; /* keep above rows */
 }
+
 a {
   text-decoration: underline;
 }
