--- a/views/layout.njk
+++ b/views/layout.njk
@@ -7,22 +7,22 @@
   <link rel="stylesheet" href="{{basePath}}/css/bulma-tooltip.min.css"> {# Bulma CSS - Tooltip v1.2.0 #}
   <link rel="stylesheet" href="{{basePath}}/css/common.css">
   <script src="{{basePath}}/js/libs/pako/2.0.4/pako.min.js"></script>
-  <script src="{{basePath}}/js/common.js"></script>
 </head>
 <body>
-
-  <section class="hero">
+  <header>
     <div class="hero-body">
       <h1 class="title">Companies House Service Dashboard</h1>
       <p class="subtitle">Last scan: {{ lastScan | date("DD MMM YYYY - h:mm:ss A") }}</p>
     </div>
-  </section>
+  </header>
+  
+  <nav>
+    {% include "partials/tabs.njk" %}
+  </nav>
 
-  {% include "partials/tabs.njk" %}
-
-  <section class="section">
+  <main>
     {% block content %}{% endblock %}
-  </section>
+  </main>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
