Ensure filters only take up as much space as they need

--- a/views/teams.njk
+++ b/views/teams.njk
@@ -53,7 +53,7 @@
         </div>
     </div>
     <div class="columns">
-        <div class="column is-2">
+        <div class="column is-narrow">
             <!-- Master checkbox to control all .level1-checkbox -->
             <div class="masterCheckbox">
                 <input type="checkbox" id="masterCheckbox-id" checked>
