--- a/views/macros.njk
+++ b/views/macros.njk
@@ -9,7 +9,7 @@
 {% macro addDaysAgo (date) %}
    {% set value = date | daysAgo %}
       {% if value %}
-         <span class="days-ago">({{ value }})</span>
+         <span class="days-ago"> ({{ value }})</span>
       {% endif %}
 {% endmacro %}
 
@@ -124,4 +124,18 @@ The select will have:
    {% else %}
       is-danger
    {% endif %}
+{% endmacro %}
+
+
+{% macro addVulnerabilityKey(containerStyle, elementStyle) %}
+<div>
+      <p class="has-text-weight-semibold">Dependency Track Key:</p>
+      <div class="is-flex {{containerStyle}} is-justify-content-space-around">
+         <span class="{{elementStyle}} tag has-background-danger-30 has-text-white">Critical</span>
+         <span class="{{elementStyle}} tag is-danger">High</span>
+         <span class="{{elementStyle}} tag is-warning">Medium</span>
+         <span class="{{elementStyle}} tag is-success">Low</span>
+         <span class="{{elementStyle}} tag">Components</span>
+      </div>
+</div>
 {% endmacro %}
