--- a/views/partials/tabs.njk
+++ b/views/partials/tabs.njk
@@ -1,16 +1,13 @@
 <div class="tabs is-boxed">
   <ul>
-    <li class="{{ 'is-active' if active == 'home' }}">
-      <a href="{{basePath}}">Home</a>
-    </li>
     <li class="{{ 'is-active' if active == 'teams' }}">
-      <a href="{{basePath}}/teams">Services</a>
-    </li>
-    <li class="{{ 'is-active' if active == 'details' }}">
-      <a href="{{basePath}}/details">Classic</a>
+      <a href="{{basePath}}">Services</a>
     </li>
     <li class="{{ 'is-active' if active == 'runtimes' }}">
       <a href="{{basePath}}/runtimes">Runtimes</a>
+    </li>
+    <li class="{{ 'is-active' if active == 'help' }}">
+      <a href="{{basePath}}/help">Help</a>
     </li>
   </ul>
 </div>
