--- a/views/index.njk
+++ b/views/index.njk
@@ -18,7 +18,7 @@
             </a>
             {{addDaysAgo( ReleaseDate ) }}
         {% else %}
-            <a class="has-text-black" href="{{depTrackFallback}}">
+            <a class="has-text-black" href="{{devGuideDocumentationLink}}">
                 {{ versionData.version }}
             </a>
             {{addDaysAgo( ReleaseDate ) }}
