Make external help page links standard text

--- a/views/help.njk
+++ b/views/help.njk
@@ -14,8 +14,8 @@
   <div class="content">
     <h2 class="title">Services Dashboard - Help</h2>
     <p>
-      We're gathering feedback on people's experience of the dashboard. You can  
-      <span><a href="https://forms.office.com/e/xmvWHNhuBb">provide feedback here</a>.</span>
+      We're gathering feedback on people's experience of the dashboard. You can provide feedback using the   
+      <span><a href="https://forms.office.com/e/xmvWHNhuBb">feedback form</a>.</span>
     </p>
     <p>The dashboard provides a snapshot of the health of our services in each environment, including:</p>
     <ul>
@@ -29,7 +29,7 @@
       <h3>Frequently Asked Questions</h3>
       {{faq("Are there any developer guides available?", "faq-dev-guides")}}
       <p>
-        Absolutely! We're collecting a list of developer guides and publishing them <a href={{devGuideDocumentationLink}}>here</a>.
+        Absolutely! We're collecting a list of developer guides and publishing them here: <a href={{devGuideDocumentationLink}}>Developer Guides</a>.
       </p>
       {{faq("How do I add a new service to the dashboard?", "faq-add-to-dashboard")}}
       <p>
@@ -46,8 +46,8 @@
                 DEP_TRACK_PROJ_NAME: < YOUR_SERVICE_NAME >
           </code>
         </pre>
-        <p>Further information is available in the developer guides under, "Adding a service to Dependency Track"
-          <a href={{devGuideDocumentationLink}}>available here</a>.
+        <p>Further information is available in the developer guides under, "Adding a service to Dependency Track". For more details, have a look at the  
+          <a href={{devGuideDocumentationLink}}>Developer Guides</a>.
         </p>
       </p>
       {{faq("I made changes, why isn't the dashboard updating?", "faq-dashboard-not-updating")}}
