--- a/views/index.njk
+++ b/views/index.njk
@@ -236,6 +236,14 @@ document.addEventListener("DOMContentLoaded", () => {
   function filter() {
     const activeTeams = new Set(checkboxes.filter(cb => cb.checked).map(cb => cb.id));
 
+    console.log("Checkboxes: ", checkboxes.length);
+
+    if (checkboxes && checkboxes.length !== activeTeams.size) {
+        // Not all checkboxes are checked, so uncheck "Select all"
+        master.checked = false;
+    }
+
+    // No checkboxes are selected
     if (activeTeams.size === 0) {
         master.checked = false;
     }
