--- a/views/index.njk
+++ b/views/index.njk
@@ -236,9 +236,8 @@ document.addEventListener("DOMContentLoaded", () => {
   function filter() {
     const activeTeams = new Set(checkboxes.filter(cb => cb.checked).map(cb => cb.id));
 
-    if (checkboxes && checkboxes.length !== activeTeams.size) {
-        // Not all checkboxes are checked, so uncheck "Select all"
-        master.checked = false;
+    if (checkboxes) {
+        master.checked = checkboxes.length === activeTeams.size;
     }
 
     // No checkboxes are selected
