--- a/views/help.njk
+++ b/views/help.njk
@@ -110,10 +110,11 @@
       </p>
       {{faq("Why does SonarQube say that it is missing new code stats?", "faq-sonarqube-stats")}}
       <p>
-        The dashboard shows SonarQube stats for both the project overall and new code.
+        SonarQube has stats for both the project overall and 'new code'.
       </p>
       <p>
-        "Missing new code stats" means that Sonar only has it's initial scan, and is waiting for you to push changes to your project before it runs another scan.
+        "Missing new code stats" means that SonarQube only has stats for its initial scan. 
+        If you push further changes, SonarQube will run additional scans for this 'new code', and generate the stats as expected.
       </p>
     </div>
   </div>
